--- a/notebooks/embedding_calculation.ipynb
+++ b/notebooks/embedding_calculation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "921b6444-b562-4478-ae55-8a8a12c8020f",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
     "    json_data = {\"batches\": batches}\n",
     "    return json_data\n",
     "\n",
-    "def get_descriptors(json_data, url=\"http://192.168.1.100:80/predict\"):  # Replace with address of own container\n",
+    "def get_descriptors(json_data, url=\"http://127.0.0.1:80/predict\"):  # Adjust the address of the container if needed\n",
     "    headers = {'Content-Type': 'application/json'}\n",
     "    response = requests.post(url, data=json.dumps(json_data), headers=headers)\n",
     "    response_json = response.json()\n",
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "id": "4d49b624-d892-48eb-8b0e-b13fb3552d09",
    "metadata": {},
    "outputs": [],
@@ -788,7 +788,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smiles_list = np.genfromtxt(\"smiles.txt\", dtype=str, comments=None)\n",
+    "smiles_list = np.genfromtxt(\"data/smiles.txt\", dtype=str, comments=None)\n",
     "print(f\"Loaded {len(smiles_list)} SMILES\")\n",
     "\n",
     "similarity_matrix = get_pairwise_similarity(smiles_list)\n",
@@ -820,23 +820,22 @@
     "    (\"mte\", get_mte),\n",
     "    (\"macaw\", get_macaw),\n",
     "    (\"molformer\", get_molformer),\n",
-    "    (\"gpt2\", get_mol2vec),\n",
+    "    (\"gpt2\", get_gpt2),\n",
     "    (\"bert_smiles\", get_bert_smiles),\n",
-    "    (\"mat\", get_mat),\n",
+    "    (\"mat\", get_macaw),\n",
     "    (\"rmat\", get_rmat),\n",
     ")\n",
-    "measure_list = (\"euclidean\", \"cosine\", \"canberra\")\n",
+    "measure_list = (\"euclidean\", \"cosine\")\n",
     "\n",
     "for emb_name, emb_func in embedding_list:\n",
-    "    embedding = emb_func(smiles_list)\n",
+    "    with open(f\"embedding/embedding_{emb_name}.pkl\", \"rb\") as file:\n",
+    "        embedding = pickle.load(file)\n",
     "    embedding = np.nan_to_num(embedding)\n",
-    "    print(f\"Calculated {emb_name} embedding: {embedding.shape}\")\n",
-    "    with open(f\"{emb_name}_embedding.pkl\", \"wb\") as file:\n",
-    "        pickle.dump(embedding, file)\n",
+    "    print(embedding.shape)\n",
     "\n",
     "    for m_name in measure_list:\n",
     "        distance_matrix = get_pairwise_distance(embedding, m_name)\n",
-    "        with open(f\"distance_{emb_name}_{m_name}.pkl\", \"wb\") as file:\n",
+    "        with open(f\"distance/distance_{emb_name}_{m_name}.pkl\", \"wb\") as file:\n",
     "            pickle.dump(distance_matrix, file)\n",
     "        print(f\"\\tDistance {m_name} - done.\")\n",
     "    print(f\"Distance {emb_name} - done.\")"
@@ -857,28 +856,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding_list = (\"mol2vec\", \"graph2vec\", \"chemberta\", \"cddd\", \"mte\", \"macaw\", \"molformer\", \"gpt2\", \"bert_smiles\", \"mat\", \"rmat\")\n",
-    "measures_list = (\"euclidean\", \"cosine\", \"canberra\")\n",
     "\n",
-    "with open(f\"similarity.pkl\", \"rb\") as file:\n",
-    "    similarity_matrix = pickle.load(file)\n",
-    "print(similarity_matrix.shape)\n",
+    "# embedding_list = (\"mol2vec\", \"graph2vec\", \"chemberta\", \"cddd\", \"mte\", \"macaw\", \"molformer\", \"gpt2\", \"bert_smiles\", \"mat\", \"rmat\")\n",
+    "# measures_list = (\"euclidean\", \"cosine\")\n",
+    "\n",
+    "# with open(f\"similarity.pkl\", \"rb\") as file:\n",
+    "#     similarity_matrix = pickle.load(file)\n",
+    "# print(similarity_matrix.shape)\n",
     "    \n",
-    "similarity_matrix_flat = similarity_matrix.flatten()\n",
-    "for embedding in embedding_list:\n",
-    "    print(f\"{embedding.capitalize()}\")\n",
-    "    X = [similarity_matrix_flat]\n",
-    "    for measure in measures_list:\n",
-    "        with open(f\"distance_{embedding}_{measure}.pkl\", \"rb\") as file:\n",
-    "            dist_matrix = pickle.load(file)\n",
-    "        dist_matrix = np.nan_to_num(dist_matrix)\n",
-    "        dist_matrix = dist_matrix.flatten()\n",
-    "        dist_matrix_norm = (dist_matrix - np.min(dist_matrix))/np.ptp(dist_matrix)\n",
-    "        X.append(dist_matrix_norm)\n",
-    "    corr_matrix = np.corrcoef(X)\n",
-    "\n",
-    "    for measure, corr in zip(measures_list, corr_matrix[0, 1:]):\n",
-    "        print(f\"{measure}: {corr}\")"
+    "# similarity_matrix_flat = 1 - similarity_matrix.flatten()\n",
+    "# for embedding in embedding_list:\n",
+    "#     print(f\"{embedding.capitalize()}\")\n",
+    "#     for measure in measures_list:\n",
+    "#         with open(f\"distance/distance_{embedding}_{measure}.pkl\", \"rb\") as file:\n",
+    "#             dist_matrix = pickle.load(file)\n",
+    "#         dist_matrix = np.nan_to_num(dist_matrix)\n",
+    "#         dist_matrix = dist_matrix.flatten()\n",
+    "#         dist_matrix_norm = (dist_matrix - np.min(dist_matrix))/np.ptp(dist_matrix)\n",
+    "#         corr = kendalltau(similarity_matrix_flat, dist_matrix_norm)\n",
+    "#         print(f\"{measure}: {corr}\")"
    ]
   }
  ],
