--- a/notebooks/similarity_search.ipynb
+++ b/notebooks/similarity_search.ipynb
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "with open(\"embedding.pkl\", \"rb\") as file:\n",
+    "with open(\"embedding/embedding.pkl\", \"rb\") as file:\n",
     "    embedding_list = pickle.load(file)\n",
     "    \n",
     "embedding_list = np.nan_to_num(embedding_list)\n",
@@ -121,7 +121,7 @@
     "    fingerprint_list = np.array([fpgen.GetFingerprint(Chem.MolFromSmiles(smiles)) for smiles in smiles_list], dtype=rdkit.DataStructs.cDataStructs.ExplicitBitVect)\n",
     "    return fingerprint_list\n",
     "\n",
-    "smiles_list = np.genfromtxt(\"smiles.txt\", dtype=str, delimiter='\\n', comments=None)\n",
+    "smiles_list = np.genfromtxt(\"data/smiles.txt\", dtype=str, delimiter='\\n', comments=None)\n",
     "fingerprint_list = get_fingerprints(smiles_list)\n",
     "fingerprint_list.shape"
    ]
@@ -306,27 +306,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "248f8eb3-5edd-4056-920c-96c575956b2f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING clustering 10381 points to 500 centroids: please provide at least 19500 training points\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Clustering 10381 points in 512D to 500 clusters, redo 1 times, 20 iterations\n",
-      "  Preprocessing in 0.01 s\n",
-      "  Iteration 19 (11.18 s, search 9.75 s): objective=344632 imbalance=1.405 nsplit=0       \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n_clusters = 500\n",
     "kmeans = faiss.Kmeans(d=vector_dimension, k=n_clusters, niter=20, verbose=True)\n",
@@ -423,7 +406,6 @@
     "\n",
     "    similarity_total += similarity\n",
     "    count_total += count\n",
-    "    # print(f\"Cluster {cluster_id} - size: {n}, mean: {round(sim_total / count, 3)}\")\n",
     "print(f\"Mean similarity in cluster: {round(similarity_total / count_total, 3)}\")"
    ]
   }
