--- a/notebooks/embedding_calculation.ipynb
+++ b/notebooks/embedding_calculation.ipynb
@@ -13,6 +13,7 @@
     "import rdkit\n",
     "from rdkit import Chem\n",
     "from sklearn.metrics.pairwise import pairwise_distances\n",
+    "from scipy.stats import pearsonr\n",
     "from rdkit.Chem import rdFingerprintGenerator as rdGen"
    ]
   },
@@ -23,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smiles_list = np.genfromtxt(\"smiles.txt\", dtype=str, delimiter='\\n', comments=None)[:5000]\n",
+    "smiles_list = np.genfromtxt(\"data/smiles.txt\", dtype=str, delimiter='\\n', comments=None)[:5000]\n",
     "print(f\"Loaded compounds: {len(smiles_list)}\")"
    ]
   },
@@ -802,7 +803,7 @@
    "metadata": {},
    "source": [
     "### Calculating distances with different measures: euclidean, cosine, Canberra.\n",
-    "It is assumed that embedding are saved in *<embedding_name>_embedding.pkl* files. The calculated distance matrices are saved in *distance_<embedding_name>_<measure_name>.pkl*."
+    "It is assumed that embedding are saved in *\\<embedding_name\\>_embedding.pkl* files. The calculated distance matrices are saved in *distance_\\<embedding_name\\>_\\<measure_name\\>.pkl*."
    ]
   },
   {
@@ -828,6 +829,7 @@
     "measure_list = (\"euclidean\", \"cosine\")\n",
     "\n",
     "for emb_name, emb_func in embedding_list:\n",
+    "    embedding = \n",
     "    with open(f\"embedding/embedding_{emb_name}.pkl\", \"rb\") as file:\n",
     "        embedding = pickle.load(file)\n",
     "    embedding = np.nan_to_num(embedding)\n",
@@ -856,25 +858,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "embedding_list = (\"mol2vec\", \"macaw\", \"graph2vec\", \"chemberta\", \"cddd\", \"mte\", \"macaw\", \"molformer\", \"gpt2\", \"bert_smiles\", \"mat\", \"rmat\")\n",
+    "measures_list = (\"euclidean\", \"cosine\")\n",
     "\n",
-    "# embedding_list = (\"mol2vec\", \"graph2vec\", \"chemberta\", \"cddd\", \"mte\", \"macaw\", \"molformer\", \"gpt2\", \"bert_smiles\", \"mat\", \"rmat\")\n",
-    "# measures_list = (\"euclidean\", \"cosine\")\n",
-    "\n",
-    "# with open(f\"similarity.pkl\", \"rb\") as file:\n",
-    "#     similarity_matrix = pickle.load(file)\n",
-    "# print(similarity_matrix.shape)\n",
+    "with open(f\"../similarity.pkl\", \"rb\") as file:\n",
+    "    similarity_matrix = pickle.load(file)\n",
+    "print(f\"Loaded similarity matrix: {similarity_matrix.shape}\")\n",
     "    \n",
-    "# similarity_matrix_flat = 1 - similarity_matrix.flatten()\n",
-    "# for embedding in embedding_list:\n",
-    "#     print(f\"{embedding.capitalize()}\")\n",
-    "#     for measure in measures_list:\n",
-    "#         with open(f\"distance/distance_{embedding}_{measure}.pkl\", \"rb\") as file:\n",
-    "#             dist_matrix = pickle.load(file)\n",
-    "#         dist_matrix = np.nan_to_num(dist_matrix)\n",
-    "#         dist_matrix = dist_matrix.flatten()\n",
-    "#         dist_matrix_norm = (dist_matrix - np.min(dist_matrix))/np.ptp(dist_matrix)\n",
-    "#         corr = kendalltau(similarity_matrix_flat, dist_matrix_norm)\n",
-    "#         print(f\"{measure}: {corr}\")"
+    "similarity_matrix_flat = 1 - similarity_matrix.flatten()\n",
+    "for embedding in embedding_list:\n",
+    "    print(f\"{embedding.capitalize()}\")\n",
+    "    for measure in measures_list:\n",
+    "        with open(f\"../working/distance/distance_{embedding}_{measure}.pkl\", \"rb\") as file:\n",
+    "            dist_matrix = pickle.load(file)\n",
+    "        dist_matrix = np.nan_to_num(dist_matrix)\n",
+    "        dist_matrix = dist_matrix.flatten()\n",
+    "        dist_matrix_norm = (dist_matrix - np.min(dist_matrix))/np.ptp(dist_matrix)\n",
+    "        corr = pearsonr(similarity_matrix_flat, dist_matrix_norm)\n",
+    "        print(f\"{measure}: {corr}\")"
    ]
   }
  ],
