--- a/notebooks/vector_operations.ipynb
+++ b/notebooks/vector_operations.ipynb
@@ -47,17 +47,19 @@
    "outputs": [],
    "source": [
     "smiles_list = np.genfromtxt(\"data/smiles.csv\", dtype=str, comments=None)[1:]\n",
-    "print(smiles_list.shape)\n",
+    "print(f\"Loaded SMILES: {smiles_list.shape}\")\n",
     "\n",
     "fpgen = rdGen.GetMorganGenerator(radius=2, fpSize=2048)\n",
     "fingerprint_list = [fpgen.GetFingerprint(Chem.MolFromSmiles(smiles)) for smiles in smiles_list]\n",
-    "print(len(fingerprint_list))"
+    "print(f\"Fingerprints generated: {len(fingerprint_list)}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "d6c5fef8-f655-4adf-ad8f-3ad06dc8287d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Cluster by Tanimoto similarity on Morgan2 fingerprints"
    ]
@@ -101,7 +103,9 @@
   {
    "cell_type": "markdown",
    "id": "6f69e65d-b8dc-4b07-9778-717e501d402d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Cluster by distance on embedding"
    ]
@@ -123,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "d8af255b-724b-4c84-9509-719b16d4a096",
    "metadata": {},
    "outputs": [],
@@ -131,11 +135,13 @@
     "def rand_index(clusters_fp, clusters_emb):\n",
     "    counts = [[0, 0], [0, 0]]\n",
     "    n = len(clusters_fp)\n",
-    "    print()\n",
     "    for i in range(n):\n",
     "        for j in range(i+1, n):\n",
     "            counts[int(clusters_fp[i] == clusters_fp[j])][int(clusters_emb[i] == clusters_emb[j])] += 1\n",
-    "    print(f\"Counts: {counts[0][0], counts[0][1], counts[1][0], counts[1][1]}\")\n",
+    "    print(f\"Counts:\\nFingerprints - different cluster, embedding - different cluster: {counts[0][0]}\")\n",
+    "    print(f\"Fingerprints - different cluster, embedding - same cluster: {counts[0][1]}\")\n",
+    "    print(f\"Fingerprints - same cluster, embedding - different cluster: {counts[1][0]}\")\n",
+    "    print(f\"Fingerprints - same cluster, embedding - same cluster: {counts[1][1]}\")\n",
     "    rand_idx = (counts[0][0] + counts[1][1]) / np.sum(counts)\n",
     "    return rand_idx"
    ]
@@ -169,16 +175,14 @@
   {
    "cell_type": "markdown",
    "id": "efba21f1-c51b-43ea-9f5b-b64e8ad14775",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Compare similarity search results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "f8b449f9-5ed8-4a58-96af-9fef65250a48",
    "metadata": {},
    "outputs": [],
@@ -207,7 +211,7 @@
     "    if distances[0] > distances[-1]:\n",
     "        distances = distances[::-1]\n",
     "        results = results[::-1]\n",
-    "    idx = np.argmax(distances > threshold**2)\n",
+    "    idx = np.argmax(distances > threshold**2) # Results from FAISS are squared euclidean distance\n",
     "    return results[:idx], total_time"
    ]
   },
@@ -223,6 +227,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bf66f6a5-d9c5-4cc7-832d-0524995e4894",
+   "metadata": {},
+   "source": [
+    "It is assumed that embeddings are saved as *embedding_\\<emb_name\\>_\\<dist_name\\>.pkl* and embeddings of the query compounds as *embedding_\\<emb_name\\>_\\<dist_name\\>_query.pkl*."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fccfb129-e634-4f72-9f61-6313294715c6",
@@ -230,17 +242,16 @@
    "outputs": [],
    "source": [
     "threshold = 0.15\n",
-    "fpgen = rdGen.GetMorganGenerator(radius=2, fpSize=2048)\n",
     "\n",
     "for emb_name, dist_name, index_cls in embedding_distance:\n",
     "    with open(f\"embedding/embedding_{emb_name}_{dist_name}_query.pkl\", \"rb\") as file:\n",
     "        query_embedding_list = pickle.load(file)\n",
     "    query_embedding_list = np.nan_to_num(query_embedding_list)\n",
-    "    print(query_embedding_list.shape)  \n",
+    "    print(f\"Loaded query embeddings: {query_embedding_list.shape}\")  \n",
     "    with open(f\"embedding/embedding_{emb_name}_{dist_name}.pkl\", \"rb\") as file:\n",
     "        embedding_list = pickle.load(file)\n",
     "    embedding_list = np.nan_to_num(embedding_list)\n",
-    "    print(embedding_list.shape)\n",
+    "    print(f\"Loaded embeddings: {embedding_list.shape}\")\n",
     "\n",
     "    vector_dimension = embedding_list.shape[1]\n",
     "    index = index_cls(vector_dimension)\n",
