--- a/notebooks/similarity_search.ipynb
+++ b/notebooks/similarity_search.ipynb
@@ -1,29 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "a093906b-d9bd-4852-a32e-57c2e65fcc04",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.gridspec import GridSpec\n",
-    "from matplotlib.backends.backend_pdf import PdfPages\n",
-    "from sklearn.metrics.pairwise import pairwise_distances\n",
-    "import pickle\n",
-    "import faiss\n",
-    "import rdkit\n",
-    "from rdkit import Chem\n",
-    "from rdkit.Chem import Draw\n",
-    "from rdkit.Chem import rdFingerprintGenerator as rdGen\n",
-    "from rdkit import DataStructs"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "4026f274-03e7-447c-9684-2ca4e186008e",
    "metadata": {
@@ -83,38 +60,19 @@
   {
    "cell_type": "markdown",
    "id": "ea816c2f-613d-4d57-89f9-2724235c5607",
-   "metadata": {},
-   "source": [
-    "# Similarity search"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8d7130d5-11c1-4c85-8a7a-60d135c0e0a0",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Comparing results with Tanimoto similarity scores"
+    "# Similarity search - comparing results with Tanimoto similarity scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "a6c62f15-92cc-4fd1-bdec-e07656b6b754",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10381, 2048)"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_fingerprints(smiles_list):\n",
     "    fpgen = rdGen.GetMorganGenerator(radius=2, fpSize=2048)\n",
@@ -324,16 +282,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a13ea00-7085-4c61-be06-06e4da29e9b7",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "## Calculate mean Tanimoto similarity in clusters"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "60265b99-144d-4ec4-b3f4-55bc1ba1d79c",
    "metadata": {},
    "source": [
@@ -376,18 +324,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "5dfdbdb8-26e2-4502-a46c-408f580bda88",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean similarity in cluster: 0.328\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "similarity_total = 0\n",
     "count_total = 0\n",
